@@ -39,3 +39,4 @@ KPresenter 1.2beta1 -> 1.2 beta 2
 - Add support for protect content of text object
 - Now we can close polyline object
 - Fix save/load variable
+- Use tripleState in styledia
